tests/vendor/valid/trivial/paren.c
//expect 254
//tags: trivial, unary
int main() {
    return (-2);
}