tests/vendor/invalid/semantics/undeclared_var_unary.c
//tags: simple, unary, undeclared
int main() {
    return -a;
}